Update node dependencies
Use NPM scripts to run coffeelint

- Update coffeelint to 2.1.0

  Also update Coffeescript and explictly depends on version 2,
  Use `undefined` as default argument instead of null, it's breaking
  changes on Coffescript 2.

  See:
    - https://coffeescript.org/#breaking-changes-default-values
    - https://github.com/jashkenas/coffeescript/issues/2201

- Remove grunt and its plugins

  inlcude grunt-coffeelint, grunt-contrib-coffee and grunt-mocha-cov,
  Remove Gruntfile.coffee by using NPM scripts, and remove path of "npm bin"
  in scripts, Because the command of "npm run" adds node_modules/.bin to the
  PATH provided to scripts automatically.

- Update vulnerable dependencies

  include socket.io, chokidar

- Explictly depends on mocha

  Add --exit flag

  "By default, Mocha will no longer force the process to exit once all
  tests complete. This means any test code (or code under test) which
  would normally prevent node from exiting will do so when run in Mocha.
  Supply the --exit flag to revert to pre-v4.0.0 behavior"

  https://github.com/mochajs/mocha/issues/2879
  https://mochajs.org/#-exit

- Use c8 to output coverage instead of blanket
- Add generate-examples scripts

  To replace 'gen-examples' task defined in Gruntfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,5 @@ addons:
     - gcc-4.8
     - g++-4.8
 env: CXX="g++-4.8" CC="gcc-4.8"
-before_install:
-    - npm install -g grunt-cli
 after_script:
-    - grunt coveralls
+    - npm run coveralls
