--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "aglio": "./bin/aglio.js"
   },
   "scripts": {
-    "test": "grunt test",
-    "prepare": "grunt compile",
-    "blanket": {
-      "pattern": [
-        "aglio/lib"
-      ],
-      "data-cover-never": "node_modules"
-    }
+    "build": "npm run lint && npm run compile",
+    "compile": "coffee -o lib -c src",
+    "coverage": "npm run coverage:html",
+    "coverage:text": "npm run build && c8 mocha",
+    "coverage:html": "npm run coverage:text && c8 -r html report",
+    "coveralls": "npm run coverage:text && c8 -r text-lcov report | coveralls",
+    "gen:examples": "npm run compile && ./scripts/generate-examples",
+    "lint": "coffeelint src test",
+    "prepare": "npm run compile",
+    "test": "npm run build && mocha"
   },
   "author": "Daniel G. Taylor",
   "license": "MIT",
@@ -37,20 +39,19 @@
   "dependencies": {
     "aglio-theme-olio": "github:Gasol/aglio-theme-olio#lib",
     "chokidar": "^1.4.1",
+    "chokidar": "^2.1.5",
     "cli-color": "^1.1.0",
     "drafter": "^2.0.0-pre.1",
     "pretty-error": "^1.2.0",
     "serve-static": "^1.10.0",
-    "socket.io": "^1.3.7",
+    "socket.io": "^2.2.0",
     "yargs": "^3.31.0"
   },
   "devDependencies": {
-    "async": "^1.5.0",
-    "coffeelint": "^1.14.2",
-    "grunt": "~0.4.5",
-    "grunt-coffeelint": "0.0.13",
-    "grunt-contrib-coffee": "^0.13.0",
-    "grunt-mocha-cov": "^0.4.0",
+    "c8": "^4.1.5",
+    "coffeelint": "^2.1.0",
+    "coveralls": "^3.0.3",
+    "mocha": "^6.1.4",
     "sinon": "^1.17.2"
   }
 }
